[package]
name = "hd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.3"
futures = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
tokio-util = { version = "0.7.0", features = ["codec"] }
