[package]
name = "hu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
tokio-util = { version = "0.7.0", features = ["codec"] }
